--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.0",
+    "faker": "^5.1.0",
+    "node-fetch": "^2.6.1",
     "ora": "^5.0.0",
-    "puppeteer": "^3.3.0"
+    "ow": "^0.17.0",
+    "puppeteer": "^3.3.0",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
