--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "instaposts-downloader",
+    "name": "instagram-profile-downloader",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.js",
