--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "ow": "^0.6.0",
         "puppeteer": "^3.3.0",
         "puppeteer-extra": "^3.1.15",
-        "puppeteer-extra-plugin-stealth": "^2.6.2",
+        "puppeteer-extra-plugin-stealth": "^2.6.5",
         "request": "^2.88.2"
     },
     "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/index.js"
     },
     "author": "notsapinho"
 }
