--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
     "name": "instagram-profile-downloader",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "",
-    "main": "src/index.js",
-    "dependencies": {
-        "async": "^3.2.0",
-        "delay": "^3.0.0",
-        "dotenv": "^8.2.0",
-        "node-fetch": "^2.6.1",
-        "ora": "^5.1.0",
-        "ow": "^0.6.0",
-        "puppeteer": "^3.3.0",
-        "puppeteer-extra": "^3.1.15",
-        "puppeteer-extra-plugin-stealth": "^2.6.5",
-        "request": "^2.88.2"
-    },
-    "devDependencies": {},
+    "main": "dist/",
     "scripts": {
-        "start": "node src/index.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "npm run build && node dist/",
+        "build": "npx tsc -b ."
     },
-    "author": "notsapinho"
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.4"
+    },
+    "dependencies": {
+        "@types/async": "^3.2.6",
+        "@types/node": "^14.14.41",
+        "@types/terminal-kit": "^1.28.2",
+        "async": "^3.2.0",
+        "colors": "^1.4.0",
+        "dotenv": "^8.2.0",
+        "instagram-private-api": "^1.44.1",
+        "terminal-kit": "^2.0.7"
+    }
 }
